--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,25 @@
 :root {
+  /* ТЕКСТ */
   --primary-text-color: #757575;
   --second-font-color: #212121;
+  --footer-contacts-text-color: rgba(255, 255, 255, 0.6);
+
+  /* КОЛЬОРИ */
   --accent-color: #2196f3;
   --primary-white-color: #ffffff;
+  --social-buttons-color: rgb(175, 177, 184);
+
+  /* ФОН */
   --bg-grey-color: #2f303a;
   --secondary-section-background: #f5f4fa;
-  --footer-contacts-text-color: rgba(255, 255, 255, 0.6);
-  --color-border-project-item: rgba(238, 238, 238, 1);
-  --color-border-under-main-nav: rgb(236,236,236);
   --bg-color-for-features: rgba(245, 244, 250, 1);
-  --social-buttons-color: rgb(175, 177, 184);
+  --bg-color-work-examples: rgba(47, 48, 58, 0.8);
   --footer-social-bg-for-icon: rgba(255, 255, 255, 0.1);
+  --backgroun-color-modal-window: rgba(0, 0, 0, 0.2);
+
+  /* МЕЖІ */
+  --color-border-project-item: rgba(238, 238, 238, 1);
+  --color-border-under-main-nav: rgb(236, 236, 236);
 }
 
 body {
@@ -27,14 +36,22 @@ body {
   padding: 0;
 }
 
-.link {text-decoration: none;}
+.link {
+  text-decoration: none;
+  display: inline-block;
+}
 
-h1, h2, h3, p {
+h1,
+h2,
+h3,
+p {
   margin: 0;
   padding: 0;
 }
 
-img {display: block;}
+img {
+  display: block;
+}
 
 .container {
   width: 1200px;
@@ -42,14 +59,16 @@ img {display: block;}
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  }
+}
 
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-.section.no-padding-top {padding-top: 0;}
+.section.no-padding-top {
+  padding-top: 0;
+}
 
 .visually-hidden {
   position: absolute;
@@ -65,8 +84,24 @@ img {display: block;}
 }
 
 /* СЕКЦІЯ ХЕДЕР */
+.page-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-height: 80px;
+  width: 100%;
+  background-color: var(--primary-white-color);
+  z-index: 1;
+}
 
-.header {border-bottom: 1px solid var(--color-border-under-main-nav);}
+.page-header::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 1px;
+  background-color: var(--color-border-under-main-nav);
+}
 
 .main-nav {
   display: flex;
@@ -82,14 +117,18 @@ img {display: block;}
   letter-spacing: 0.03em;
 }
 
-.accent-logo {color: var(--accent-color);}
+.accent-logo {
+  color: var(--accent-color);
+}
 
 .page-nav {
   display: flex;
   margin-left: 93px;
 }
 
-.page-nav__item:not(:first-child) {margin-left: 50px;} 
+.page-nav__item:not(:first-child) {
+  margin-left: 50px;
+}
 
 .page-nav__link {
   display: flex;
@@ -102,6 +141,10 @@ img {display: block;}
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .page-nav__link:hover,
@@ -109,15 +152,28 @@ img {display: block;}
   color: var(--accent-color);
 }
 
-.page-nav__link.current {color: var(--accent-color);
+.page-nav__link.current {
+  position: relative;
+  color: var(--accent-color);
+}
+
+.page-nav__link.current::after {
+  position: absolute;
+  bottom: 0;
+
+  content: '';
+
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+  background-color: var(--accent-color);
 }
 
 .contacts {
   display: flex;
-  margin-left: auto; 
+  margin-left: auto;
   align-items: center;
-
-} 
+}
 
 .contacts .contacts-item + .contacts-item {
   margin-left: 50px;
@@ -135,22 +191,25 @@ img {display: block;}
   line-height: 1.14;
   letter-spacing: 0.02em;
 
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-link:hover,
-.contacts-link:focus {color: var(--accent-color);}
+.contacts-link:focus {
+  color: var(--accent-color);
+}
 
 .icon-mail {
   margin-right: 10px;
   fill: currentColor;
 }
 
-.icon-phone {  
+.icon-phone {
   margin-right: 10px;
   fill: currentColor;
 }
-
-
 
 /* СЕКЦІЯ ГЕРОЙ */
 
@@ -164,11 +223,11 @@ img {display: block;}
   margin-left: auto;
 
   background-image: linear-gradient(
-    to right,
-     rgba(47, 48, 58, 0.4) 15%,
-     rgba(47, 48, 58, 0.4) 30%
-     ), 
-  url("../images/hero-img.jpg");
+      to right,
+      rgba(47, 48, 58, 0.4) 15%,
+      rgba(47, 48, 58, 0.4) 30%
+    ),
+    url('../images/hero-img.jpg');
 
   background-color: rgb(47, 48, 58);
 
@@ -209,6 +268,75 @@ img {display: block;}
   cursor: pointer;
 }
 
+/* МОДАЛЬНЕ ВІКНО */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+
+  width: 100%;
+  height: 100%;
+  background-color: var(--backgroun-color-modal-window);
+
+  opacity: 1;
+  transition: opacity;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.8, 0.8);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1, 1);
+  transition: transform 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+
+  z-index: 2;
+
+  height: 580px;
+  width: 520px;
+  padding: 15px;
+
+  background-color: var(--primary-white-color);
+  border-radius: 4px;
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+}
+
+.close-button {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  padding: 10px 10px;
+  border-radius: 50%;
+
+  background-color: inherit;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.close-icon {
+  fill: currentColor;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
 /* СЕКЦІЯ ОСОБЛИВОСТІ */
 
@@ -223,22 +351,27 @@ img {display: block;}
   letter-spacing: 0.03em;
 }
 
-.key-positions {display: flex;}
+.key-positions {
+  display: flex;
+}
 
-.key-position__item {width: calc((100% - 3 * 30px) / 4); }
+.key-position__item {
+  width: calc((100% - 3 * 30px) / 4);
+}
 
-.key-position__item:not(:first-child) {margin-left: 30px;}
+.key-position__item:not(:first-child) {
+  margin-left: 30px;
+}
 
 .thumb-feature {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 120px;
-  
+
   background-color: var(--bg-color-for-features);
   margin-bottom: 30px;
   border-radius: 4px;
-
 }
 
 .key-position-title {
@@ -259,31 +392,59 @@ img {display: block;}
   letter-spacing: 0.03em;
 }
 
-
 /* СЕКЦІЯ ЧИМ МИ ЗАЙМАЄМОСЯ */
 
-.work-examples {display: flex;}
+.work-examples {
+  display: flex;
+}
 
-.work-examples .work-example:not(:first-child) {margin-left: 30px;}
+.work-examples .work-example:not(:first-child) {
+  margin-left: 30px;
+}
+.work-example {
+  position: relative;
+}
 
+.work-example > span {
+  position: absolute;
+
+  bottom: 0;
+  left: 0;
+
+  width: 100%;
+  padding-top: 27px;
+  padding-bottom: 27px;
+
+  text-align: center;
+  color: var(--primary-white-color);
+  background-color: var(--bg-color-work-examples);
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1428;
+  letter-spacing: 0.03em;
+}
 
 /* СЕКЦІЯ ПРО КОМАНДУ */
 
-.team {background-color: var(--secondary-section-background); }
+.team {
+  background-color: var(--secondary-section-background);
+}
 
-.worker-list {display: flex;
+.worker-list {
+  display: flex;
 }
 
 .worker-list__item {
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
-  0px 1px 1px 0px rgba(0, 0, 0, 0.14),
-  0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
-
 }
 
-.worker-list .worker-list__item:not(:first-child) {margin-left: 30px;}
+.worker-list .worker-list__item:not(:first-child) {
+  margin-left: 30px;
+}
 
 .worker-list__info {
   display: flex;
@@ -318,10 +479,12 @@ img {display: block;}
 
 .social {
   display: flex;
-  justify-content: center;}
+  justify-content: center;
+}
 
-.social-item:not(:first-child) {margin-left: 10px;}
-
+.social-item:not(:first-child) {
+  margin-left: 10px;
+}
 
 .social-item-link {
   display: flex;
@@ -332,17 +495,21 @@ img {display: block;}
   height: 44px;
   border-radius: 50%;
   border: var(--accent-color);
+
+  transition-property: color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-item__icon {fill: currentColor;}
+.social-item__icon {
+  fill: currentColor;
+}
 
 .social-item-link:hover,
 .social-item-link:focus {
-  color: var(--primary-white-color);  
+  color: var(--primary-white-color);
   background-color: var(--accent-color);
 }
-
-
 
 /* ПАРТНЕРИ */
 .partners {
@@ -351,8 +518,9 @@ img {display: block;}
   gap: 30px;
 }
 
-.partner__item:not(:first-child) {margin-left: 30px;}
-
+.partner__item:not(:first-child) {
+  margin-left: 30px;
+}
 
 .partner__item {
   display: flex;
@@ -364,16 +532,21 @@ img {display: block;}
   border: 1px solid rgb(175, 177, 184);
   border-radius: 4px;
   color: var(--social-buttons-color);
+
+  transition-property: color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-logo {fill: currentColor;}
+.icon-logo {
+  fill: currentColor;
+}
 
 .partner__item:hover,
 .partner__item:focus {
-  color: var(--accent-color);  
+  color: var(--accent-color);
   border: 1px solid var(--accent-color);
 }
-
 
 /* СЕКЦІЯ ФУТЕР */
 
@@ -386,12 +559,16 @@ img {display: block;}
 
 .footer-box {
   display: flex;
-align-items: baseline;
+  align-items: baseline;
 }
 
-.footer-item:not(:first-child) {margin-left: 70px;}
+.footer-item:not(:first-child) {
+  margin-left: 70px;
+}
 
-.logo-inverse {color: var(--primary-white-color);}
+.logo-inverse {
+  color: var(--primary-white-color);
+}
 
 .footer-item .logo {
   display: flex;
@@ -417,7 +594,9 @@ align-items: baseline;
   letter-spacing: 0.03em;
 }
 
-.footer-contacts:not(:last-child) {margin-bottom: 9px;}
+.footer-contacts:not(:last-child) {
+  margin-bottom: 9px;
+}
 
 .join-label {
   margin-bottom: 20px;
@@ -442,22 +621,27 @@ align-items: baseline;
   height: 44px;
   border-radius: 50%;
   border: var(--accent-color);
+
+  transition-property: color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social .item+.item {margin-left: 10px;}
+.social .item + .item {
+  margin-left: 10px;
+}
 
-
-.social-item__icon {fill: currentColor;}
+.social-item__icon {
+  fill: currentColor;
+}
 
 .social-footer:hover,
 .social-footer:focus {
-color: var(--primary-white-color);  
-background-color: var(--accent-color);
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
 }
 
-
 /* ПОРТФОЛІО */
-
 
 /* СЕКЦІЯ КНОПКИ ФІЛЬТРУ ПОРТФОЛІО*/
 
@@ -467,8 +651,9 @@ background-color: var(--accent-color);
   margin-bottom: 50px;
 }
 
-.filter .filter-list__item:not(:first-child) {margin-left: 8px;}
-
+.filter .filter-list__item:not(:first-child) {
+  margin-left: 8px;
+}
 
 .filter-list-button {
   padding: 6px 22px;
@@ -485,6 +670,10 @@ background-color: var(--accent-color);
   letter-spacing: 0.03em;
 
   cursor: pointer;
+
+  transition-property: color, background-color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-list-button:hover,
@@ -492,10 +681,8 @@ background-color: var(--accent-color);
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
-  0px 1px 2px 0px rgba(0, 0, 0, 0.08),
-  0px 3px 1px 0px rgba(0, 0, 0, 0.1);
+    0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
 }
-
 
 /* СЕКЦІЯ ПРОЕКТИ */
 
@@ -504,24 +691,63 @@ background-color: var(--accent-color);
   flex-wrap: wrap;
 }
 
-.project__item {width: calc((100% - 2 * 30px) / 3);}
-
-.project-item-link {
-display: inline-block;
+.project__item {
+  width: calc((100% - 2 * 30px) / 3);
 }
 
+.product-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translatey(100%);
+  transition-property: transform, background-color, opacity;
+  transition-duration: 1250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 63px 24px;
+
+  color: var(--primary-white-color);
+  font-size: 18px;
+  line-height: 1.5556;
+  letter-spacing: 0.03em;
+
+  opacity: 0;
+  cursor: pointer;
+}
+
+.project-item-link {
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-item-link:hover .overlay,
+.project-item-link:focus .overlay {
+  transform: translatey(0);
+  opacity: 1;
+}
 
 .project-item-link:hover,
 .project-item-link:focus {
   box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
- 0px 4px 4px 0px rgba(0, 0, 0, 0.06),
- 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+    0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
 }
 
-.project__item:not(:nth-child(3n)) {margin-right: 30px;}
+.project__item:not(:nth-child(3n)) {
+  margin-right: 30px;
+}
 
-.project__item:not(:nth-last-child(-n+3)) {margin-bottom: 30px;}
-
+.project__item:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 30px;
+}
 
 .project__label {
   margin-bottom: 10px;
